r125 - october, 14, 2009
    * README-FR : VirtualHost example has been updated
    * TROUBLESHOOTING-FR : has been updated to reference some possible 500 
      errors
    * THANKS : has been updated
    

r124 - october, 14, 2009
    * membre : templates > _form.php : javascript helper has been replaced by
      JavascriptBase helper, fixes bug 29
    * membre : templates > showSuccess.php : javascript helper has been replaced
      by JavascriptBase helper, fixes bug 29
    

r123 - october, 13, 2009
    * Compte.php : fetch() calls have been replaced by fetchAll(), fixes 
      issue 28
    * association : actions > mailing > smtp module is not required anymore to
      send emails through smtp servers, but openssl module is required to use
      GMail


r122 - october, 13, 2009 (Grd Scarabe)
    * Wiki page 'installerPiwam' has been updated 


r121 - october, 12, 2009
    * install : actions > _checkConfiguration() > We can install Piwam even if
      memory_limit is not greater or equal to 128M
    * install : actions > _checkConfiguration() > Apache modules are not tested
      if apache_get_modules function is not available
    * install : templates > error partials have been enhanced to be more 
      readable
      

r120 - october, 12, 2009
    * update : actions > _checkSQLFilesSince() > updates are performed within
      SQL transactions
    * DBTools.class.php : executeSQLFile() > we check that query is not empty
      before launching it
            

r119 - october, 8, 2009
    * Piwam 1.1.1
    

r118 - october, 8, 2009
    * install : actions > we check if Piwam is already installed
    * install : templates > indexError.php > new file


r117 - october, 8, 2009
    * /doc/UPDATE-FR : new file
    * /data/updates/1.1-to-1.1.1 : new folder
    * /data/updates/1.1-to-1.1.1/r117.sql : new file
    * /config/databases.yml : added to svn:ignore
    * /apps/front/config/settings.yml : Google Map Key has been removed (put
      into the database)