@@ -1,5 +1,5 @@
 <h2>Localisation des membres</h2>
 <?php
-use_javascript("http://maps.google.com/maps?file=api&v=2&key=" . sfConfig::get('sf_googlemap_key'));
+use_javascript("http://maps.google.com/maps?file=api&v=2&key=" . sfConfig::get('sf_googlemap_key', $associationId));
 $map->showMap();
 ?>
